app/nodec-app-pod.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: default
  labels:
    app: nodec
    type: application
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: nodec
    type: application

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
  namespace: default
  labels:
    app: nodec
    type: application
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodec
      type: application
  strategy:
    rollingUpdate:
      maxSurge: 1 # 許容するPod追加数
      maxUnavailable: 1 # 許容するPod削除数
    type: RollingUpdate
  revisionHistoryLimit: 14
  template:
    metadata:
      name: nodeapp
      namespace: default
      labels:
        app: nodec
        type: application
    spec:
      containers:
      - name: node
        image: asia.gcr.io/gihyo-kube-303506/nodec-app:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
